--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node",
   "version": "1.0.0",
   "description": "Just a program for practice",
-  "main": "index.js",
+  "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "get-port": "^7.1.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "mongoose": "^8.12.1"
   }
 }
