--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14' # or your Node.js version
+          node-version: '23.10.0' # or your Node.js version
 
       - name: Install dependencies
         run: yarn install
 
       - name: Build the app
-        run: npm run build
+        run: yarn build
 
       - name: Deploy to Render
         run: |
