--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Just a program for practice",
   "main": "db.js",
   "scripts": {
+    "start": "node db.js",  // Assuming your entry point is db.js
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Atharva",
