--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -1,9 +1,9 @@
-name: Deploying ngoAPI to Render
+name: Deploy to Render
 
 on:
   push:
     branches:
-      - main # or the branch you want to deploy from
+      - main
 
 jobs:
   deploy:
@@ -16,13 +16,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '23.10.0' # or your Node.js version
+          node-version: '14'  # Use your preferred Node.js version
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install  # or npm install
 
-      - name: Build the app
-        run: yarn build
+      - name: Start the app (deployment step)
+        run: yarn start  # or npm start
 
       - name: Deploy to Render
         run: |
